Working on light and dark mode. Able to add a button and integrated next-themes to help with the process, but there is an issue where the css is not being applied accordingly

--- a/styles/index.css
+++ b/styles/index.css
@@ -19,6 +19,17 @@
   color: white;
 }
 
+.App[data-theme='dark'] {
+  overflow-x: none;
+  background-color: hsl(0, 0%, 100%);
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  color: rgb(0, 0, 0);
+}
+
 .justify-container {
   display: flex;
   justify-content: center;
